--- a/index.html
+++ b/index.html
@@ -1,157 +1,146 @@
 <!doctype html>
 <html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<title>Linux-AG</title>
 
-	<title>Linux AG</title>
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/league.css">
+		<link rel="stylesheet" href="css/theme/custom.css">
 
-	<link rel="stylesheet" href="css/reveal.css">
-	<link rel="stylesheet" href="css/theme/league.css">
-	<link rel="stylesheet" href="css/theme/custom.css">
+		<!-- Theme used for syntax highlighting of code -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-	<!-- Theme used for syntax highlighting of code -->
-	<link rel="stylesheet" href="lib/css/zenburn.css">
+		<!-- Printing and PDF exports -->
+		<script>
+			var link = document.createElement('link');
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			document.getElementsByTagName('head')[0].appendChild(link);
+		</script>
+	</head>
 
-	<!-- Printing and PDF exports -->
-	<script>
-		var link = document.createElement('link');
-		link.rel = 'stylesheet';
-		link.type = 'text/css';
-		link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
-		document.getElementsByTagName('head')[0].appendChild(link);
-	</script>
-</head>
-
-<body>
-	<div class="reveal">
-		<div class="footer">
-			<p> Linux AG Tübingen - <a href="https://www.linux-ag.uni-tuebingen.de"> www.linux-ag.uni-tuebingen.de </a> - linux-ag@fsi.uni-tuebingen.de</p>
-		</div>
-		<div class="slides">
-			<section>
-				<div class="start">
-					<p> Hallo wir sind die </p>
-					<h1 class="fragment fade-down" data-transition="convex"> Linux AG Tübingen</h1>
-				</div>
-			</section>
-			<section>
-				<h2> Themen </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> GNU/Linux </li>
-					<li class="fragment" data-autoslide="1000"> Freie Software </li>
-					<li class="fragment" data-autoslide="1000"> Kryptografie, Privatspähre, Internet </li>
-					<li class="fragment"> Austausch von Erfahrungen </li>
-				</ul>
-			</section>
-			<section>
-				<h2> Unsere Ziele </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> Vertiefung/Erweiterung von Kenntnissen </li>
-					<li class="fragment" data-autoslide="1000"> Aufklärung (Kryptografie, ...)</li>
-					<li class="fragment" data-autoslide="1000"> Hilfe/Support </li>
-					<li class="fragment"> Verbreitung/Föderung freier Software und deren Philosophie </li>
-				</ul>
-			</section>
-			<section>
-				<h2> Was tun wir? </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> (Mit-)Organisation des TÜBIX</li>
-					<li class="fragment" data-autoslide="1000"> Helpdesk</li>
-					<li class="fragment"> Cryptoparties </li>
-				</ul>
-			</section>
-			<section id="todo">
-				<h2> Was haben wir vor? </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> Verschiedene Services anbieten
+	<body>
+		<div class="reveal">
+			<div class="footer">
+				<p>Linux-AG Tübingen - <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a> - <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a></p>
+			</div>
+			<div class="slides">
+				<section>
+					<div class="start">
+						<p>Hallo wir sind die</p>
+						<h1 class="fragment fade-down" data-transition="convex">Linux-AG Tübingen</h1>
+					</div>
+				</section>
+				<section>
+					<h2>Themen</h2>
 					<ul>
-						<li class="fragment" data-autoslide="1000"> git-Server, dudle, etc</li>
-						<li class="fragment" data-autoslide="1000"> Linux Mirror-Server </li>
-						<li class="fragment" data-autoslide="1000"> Mailinglisten (aktuell bei Fachschaft)</li>
+						<li class="fragment" data-autoslide="1000">GNU/Linux</li>
+						<li class="fragment" data-autoslide="1000">Freie Software</li>
+						<li class="fragment" data-autoslide="1000">Kryptografie, Privatsphäre, Internet</li>
+						<li class="fragment">Austausch von Erfahrungen</li>
 					</ul>
-					</li>
-					<li class="fragment"> Server Administration für studentische Gruppen</li>
-				</ul>
-			</section>
-			<section id="project">
-				<h2> Ein aktuelles Projekt </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> Einrichtung neuer Laptops für StuRa
+				</section>
+				<section>
+					<h2>Unsere Ziele</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Vertiefung/Erweiterung von Kenntnissen</li>
+						<li class="fragment" data-autoslide="1000">Aufklärung (Kryptografie, ...)</li>
+						<li class="fragment" data-autoslide="1000">Hilfe/Support</li>
+						<li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Was tun wir?</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Helpdesk</li>
+						<li class="fragment" data-autoslide="1000">Cryptoparties</li>
+						<li class="fragment">(Mit-)Organisation des TÜBIX</li>
+					</ul>
+				</section>
+				<section id="todo">
+					<h2>Was haben wir vor?</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Verschiedene Services anbieten
 						<ul>
-							<li class="fragment" data-autoslide="1000"> Gute Nachricht: Es darf GNU/Linux drauf :) </li>
-							<li class="fragment"> Schlechte Nachricht: Windows muss auch drauf :'(</li>
+							<li class="fragment" data-autoslide="1000">git-Server, Dudle, etc</li>
+							<li class="fragment" data-autoslide="1000">Linux Mirror-Server</li>
+							<li class="fragment" data-autoslide="1000">Mailinglisten (aktuell bei fsi)</li>
 						</ul>
-					</li>
-					<li class="fragment" data-autoslide="1000"> Datenrettung bei altem Rätecafé Server </li>
-					<li class="fragment"> Einrichtung eines neuen Server <ul>
-					<li class="fragment"> PS: Wir suchen noch einen Server :) </li>
-					</ul></li>
-				</ul>
-			</section>
-			<section id="members">
-				<h2> Mitglieder </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> Studierende aller Fachrichtungen </li>
-					<li class="fragment" data-autoslide="1000"> Ehemalige Studierende </li>
-					<li class="fragment" data-autoslide="1000"> Externe* </li>
-					<li class="fragment"> Du? </li>
-				</ul>
-			</section>
-			<section id="meet">
-				<h2> Interesse? </h2>
-				<ul>
-					<li class="fragment" data-autoslide="1000"> Treffen jeden zweiten Montag, 18:30 auf dem Sand 14, C125 </li>
-					<li class="fragment" data-autoslide="1000"> Mailingliste: <span class="blue"> linux-ag@fsi.uni-tuebingen.de </span></li>
-					<li class="fragment"> Di: 14:00 - 16:00, Helpdesk im Rätecafé</li>
-				</ul>
-			</section>
-			<section id="questions">
-				<h1> Noch Fragen? </h1>
-			</section>
+						</li>
+						<li class="fragment">Server Administration für studentische Gruppen</li>
+					</ul>
+				</section>
+				<section id="project">
+					<h2>Ein aktuelles Projekt</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Einrichtung neuer Laptops für StuRa
+						<ul>
+							<li class="fragment" data-autoslide="1000">Gute Nachricht: Es darf GNU/Linux drauf :)</li>
+							<li class="fragment">Schlechte Nachricht: Windows muss auch drauf :'(</li>
+						</ul>
+						</li>
+						<li class="fragment" data-autoslide="1000">Datenrettung bei altem Rätecafé Server</li>
+						<li class="fragment">Einrichtung eines neuen Server</li>
+						<li class="fragment">PS: Wir suchen noch einen Server :)</li>
+					</ul>
+				</section>
+				<section id="members">
+					<h2>Mitglieder</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Studierende aller Fachrichtungen</li>
+						<li class="fragment" data-autoslide="1000">Ehemalige Studierende</li>
+						<li class="fragment" data-autoslide="1000">Externe*</li>
+						<li class="fragment">Du?</li>
+					</ul>
+				</section>
+				<section id="meet">
+					<h2>Interesse?</h2>
+					<ul>
+						<li class="fragment" data-autoslide="1000">Treffen jeden zweiten Montag, 18:30 auf dem Sand 14, C125</li>
+						<li class="fragment" data-autoslide="1000">Mailingliste: <span class="blue">linux-ag@fsi.uni-tuebingen.de</span></li>
+						<li class="fragment">Di: 14:00 - 16:00, Helpdesk im Räte-Café</li>
+					</ul>
+				</section>
+				<section id="questions">
+					<h1>Noch Fragen?</h1>
+				</section>
+			</div>
 		</div>
-	</div>
 
-	<script src="lib/js/head.min.js"></script>
-	<script src="js/reveal.js"></script>
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
 
-	<script>
-		// More info https://github.com/hakimel/reveal.js#configuration
-		Reveal.initialize({
-			history: true,
-			center: false,
-			transition: "convex",
-			// The "normal" size of the presentation, aspect ratio will be preserved
-			// when the presentation is scaled to fit different resolutions. Can be
-			// specified using percentage units.
-			width: 960,
-			height: 700,
+		<script>
+			// More info https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				history: true,
+				center: false,
+				transition: "convex",
+				// The "normal" size of the presentation, aspect ratio will be preserved
+				// when the presentation is scaled to fit different resolutions. Can be
+				// specified using percentage units.
+				width: 960,
+				height: 700,
 
-			// Factor of the display size that should remain empty around the content
-			margin: 0.1,
+				// Factor of the display size that should remain empty around the content
+				margin: 0.1,
 
-			// Bounds for smallest/largest possible scale to apply to content
-			minScale: 0.2,
-			maxScale: 1.5,
+				// Bounds for smallest/largest possible scale to apply to content
+				minScale: 0.2,
+				maxScale: 1.5,
 
-			// More info https://github.com/hakimel/reveal.js#dependencies
-			dependencies: [{
-				src: 'plugin/markdown/marked.js'
-			}, {
-				src: 'plugin/markdown/markdown.js'
-			}, {
-				src: 'plugin/notes/notes.js',
-				async: true
-			}, {
-				src: 'plugin/highlight/highlight.js',
-				async: true,
-				callback: function() {
-					hljs.initHighlightingOnLoad();
-				}
-			}]
-		});
-	</script>
-</body>
-
+				// More info https://github.com/hakimel/reveal.js#dependencies
+				dependencies: [
+					{ src: 'plugin/markdown/marked.js' },
+					{ src: 'plugin/markdown/markdown.js' },
+					{ src: 'plugin/notes/notes.js', async: true },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+				]
+			});
+		</script>
+	</body>
 </html>
