Remove the "data-autoslide" attribute
This can be done globally with:
------------------------------------------------------------------------
// Slide every five seconds
Reveal.configure({
  autoSlide: 5000
});
------------------------------------------------------------------------
This'll also remove the one occurrence of 'data-transition="convex"'
which is already done globally.

--- a/index.xhtml
+++ b/index.xhtml
@@ -35,43 +35,43 @@
         <section>
           <div class="start">
             <p>Hallo wir sind die</p>
-            <h1 class="fragment fade-down" data-transition="convex">Linux-AG Tübingen</h1>
+            <h1 class="fragment fade-down">Linux-AG Tübingen</h1>
           </div>
         </section>
         <section>
           <h2>Themen</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">GNU/Linux</li>
-            <li class="fragment" data-autoslide="1000">Freie Software</li>
-            <li class="fragment" data-autoslide="1000">Kryptografie, Privatsphäre, Internet</li>
+            <li class="fragment">GNU/Linux</li>
+            <li class="fragment">Freie Software</li>
+            <li class="fragment">Kryptografie, Privatsphäre, Internet</li>
             <li class="fragment">Austausch von Erfahrungen</li>
           </ul>
         </section>
         <section>
           <h2>Unsere Ziele</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Vertiefung/Erweiterung von Kenntnissen</li>
-            <li class="fragment" data-autoslide="1000">Aufklärung (Kryptografie, ...)</li>
-            <li class="fragment" data-autoslide="1000">Hilfe/Support</li>
+            <li class="fragment">Vertiefung/Erweiterung von Kenntnissen</li>
+            <li class="fragment">Aufklärung (Kryptografie, ...)</li>
+            <li class="fragment">Hilfe/Support</li>
             <li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
           </ul>
         </section>
         <section>
           <h2>Was tun wir?</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Helpdesk</li>
-            <li class="fragment" data-autoslide="1000">Cryptoparties</li>
+            <li class="fragment">Helpdesk</li>
+            <li class="fragment">Cryptoparties</li>
             <li class="fragment">(Mit-)Organisation des TÜBIX</li>
           </ul>
         </section>
         <section id="todo">
           <h2>Was haben wir vor?</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Verschiedene Services anbieten
+            <li class="fragment">Verschiedene Services anbieten
             <ul>
-              <li class="fragment" data-autoslide="1000">git-Server, Dudle, etc</li>
-              <li class="fragment" data-autoslide="1000">Linux Mirror-Server</li>
-              <li class="fragment" data-autoslide="1000">Mailinglisten (aktuell bei fsi)</li>
+              <li class="fragment">git-Server, Dudle, etc</li>
+              <li class="fragment">Linux Mirror-Server</li>
+              <li class="fragment">Mailinglisten (aktuell bei fsi)</li>
             </ul>
             </li>
             <li class="fragment">Server Administration für studentische Gruppen</li>
@@ -80,13 +80,13 @@
         <section id="project">
           <h2>Ein aktuelles Projekt</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Einrichtung neuer Laptops für StuRa
+            <li class="fragment">Einrichtung neuer Laptops für StuRa
             <ul>
-              <li class="fragment" data-autoslide="1000">Gute Nachricht: Es darf GNU/Linux drauf :)</li>
+              <li class="fragment">Gute Nachricht: Es darf GNU/Linux drauf :)</li>
               <li class="fragment">Schlechte Nachricht: Windows muss auch drauf :'(</li>
             </ul>
             </li>
-            <li class="fragment" data-autoslide="1000">Datenrettung bei altem Rätecafé Server</li>
+            <li class="fragment">Datenrettung bei altem Rätecafé Server</li>
             <li class="fragment">Einrichtung eines neuen Server</li>
             <li class="fragment">PS: Wir suchen noch einen Server :)</li>
           </ul>
@@ -94,17 +94,17 @@
         <section id="members">
           <h2>Mitglieder</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Studierende aller Fachrichtungen</li>
-            <li class="fragment" data-autoslide="1000">Ehemalige Studierende</li>
-            <li class="fragment" data-autoslide="1000">Externe*</li>
+            <li class="fragment">Studierende aller Fachrichtungen</li>
+            <li class="fragment">Ehemalige Studierende</li>
+            <li class="fragment">Externe*</li>
             <li class="fragment">Du?</li>
           </ul>
         </section>
         <section id="meet">
           <h2>Interesse?</h2>
           <ul>
-            <li class="fragment" data-autoslide="1000">Treffen jeden zweiten Montag, 18:30 auf dem Sand 14, C125</li>
-            <li class="fragment" data-autoslide="1000">Mailingliste: <span class="blue">linux-ag@fsi.uni-tuebingen.de</span></li>
+            <li class="fragment">Treffen jeden zweiten Montag, 18:30 auf dem Sand 14, C125</li>
+            <li class="fragment">Mailingliste: <span class="blue">linux-ag@fsi.uni-tuebingen.de</span></li>
             <li class="fragment">Di: 14:00 - 16:00, Helpdesk im Räte-Café</li>
           </ul>
         </section>
