Update the content for our next presentation
Where: Vorlesung "Einführung in Unix/Linux" im HSZ, Raum N02
When: 19.10.2016 um 14 Uhr

--- a/index.xhtml
+++ b/index.xhtml
@@ -32,47 +32,49 @@
         <p>Linux-AG Tübingen - <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a> - <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a></p>
       </div>
       <div class="slides">
-        <section>
+        <section id="start">
           <div class="start">
             <p>Hallo wir sind die</p>
-            <h1 class="fragment fade-down">Linux-AG Tübingen</h1>
+            <h1>Linux-AG Tübingen</h1>
           </div>
         </section>
-        <section>
+        <section id="topics">
           <h2>Themen</h2>
           <ul>
             <li class="fragment">GNU/Linux</li>
-            <li class="fragment">Freie Software</li>
+            <li class="fragment">Free and open-source software (FOSS)</li>
             <li class="fragment">Kryptografie, Privatsphäre, Internet</li>
             <li class="fragment">Austausch von Erfahrungen</li>
           </ul>
         </section>
-        <section>
+        <section id="goals">
           <h2>Unsere Ziele</h2>
           <ul>
-            <li class="fragment">Vertiefung/Erweiterung von Kenntnissen</li>
-            <li class="fragment">Aufklärung (Kryptografie, ...)</li>
+            <li class="fragment">Vertiefung und Erweiterung von Kenntnissen</li>
+            <li class="fragment">Aufklärung (CryptoParties, Anfi-Workshops, etc.)</li>
             <li class="fragment">Hilfe/Support</li>
             <li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
           </ul>
         </section>
-        <section>
+        <section id="tasks">
           <h2>Was tun wir?</h2>
           <ul>
-            <li class="fragment">Helpdesk</li>
-            <li class="fragment">Cryptoparties</li>
-            <li class="fragment">(Mit-)Organisation des TÜBIX</li>
+            <li class="fragment">Regelmäßige Treffen mit Workshops (oder Präsentationen)</li>
+            <li class="fragment">Helpdesk (im Räte-Café und über <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</li>
           </ul>
         </section>
         <section id="todo">
           <h2>Was haben wir vor?</h2>
           <ul>
+            <li class="fragment">CryptoParties/KSPs auf dem Sand organisieren</li>
+            <li class="fragment">Mitorganisation des <a href="http://www.tuebix.org/">TÜBIX</a> (Tübinger Linux-Tag)</li>
+            <li class="fragment">Evtl. eigene Software-Projekte</li>
             <li class="fragment">Verschiedene Services anbieten
-            <ul>
-              <li class="fragment">git-Server, Dudle, etc</li>
+              <ul>
+              <li class="fragment">git-Server, Dudle, Etherpad, etc.</li>
               <li class="fragment">Linux Mirror-Server</li>
               <li class="fragment">Mailinglisten (aktuell bei fsi)</li>
-            </ul>
+              </ul>
             </li>
             <li class="fragment">Server Administration für studentische Gruppen</li>
           </ul>
@@ -80,15 +82,17 @@
         <section id="project">
           <h2>Ein aktuelles Projekt</h2>
           <ul>
-            <li class="fragment">Einrichtung neuer Laptops für StuRa
-            <ul>
-              <li class="fragment">Gute Nachricht: Es darf GNU/Linux drauf :)</li>
-              <li class="fragment">Schlechte Nachricht: Windows muss auch drauf :'(</li>
-            </ul>
+            <li class="fragment">Einrichtung eines neuen Servers mit NixOS</li>
+            <li class="fragment">Einrichtung neuer Laptops für den StuRa
+              <ul>
+              <li>Gute Nachricht: Es darf GNU/Linux drauf :)</li>
+              <li>Schlechte Nachricht: Windows muss auch drauf :'(</li>
+              </ul>
             </li>
-            <li class="fragment">Datenrettung bei altem Rätecafé Server</li>
-            <li class="fragment">Einrichtung eines neuen Server</li>
+            <li class="fragment">Datenrettung bei altem Räte-Café Server</li>
+<!--
             <li class="fragment">PS: Wir suchen noch einen Server :)</li>
+-->
           </ul>
         </section>
         <section id="members">
@@ -103,13 +107,25 @@
         <section id="meet">
           <h2>Interesse?</h2>
           <ul>
-            <li class="fragment">Treffen jeden zweiten Montag, 18:30 auf dem Sand 14, C125</li>
-            <li class="fragment">Mailingliste: <span class="blue">linux-ag@fsi.uni-tuebingen.de</span></li>
-            <li class="fragment">Di: 14:00 - 16:00, Helpdesk im Räte-Café</li>
+            <li class="fragment">Treffen:
+              <ul>
+              <li>Termin: TBD, normalerweise alle zwei Wochen</li>
+              <li>Ort: Raum A302 auf dem Sand 14</li>
+              </ul>
+            </li>
+            <li class="fragment">Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a></li>
+            <li class="fragment">Website: <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a></li>
+            <li class="fragment">Helpdesk:
+              <ul>
+              <li>Termin: TBD</li>
+              <li>Ort: Im Räte-Café (links oben im CHF (Wilhelmstraße))</li>
+              </ul>
+            </li>
           </ul>
         </section>
         <section id="questions">
           <h1>Noch Fragen?</h1>
+          <p>Folien: <a href="https://www.linux-ag.uni-tuebingen.de/presentation/">www.linux-ag.uni-tuebingen.de/presentation/</a></p>
         </section>
       </div>
     </div>
