Add date for next meeting and remove old projects

--- a/index.xhtml
+++ b/index.xhtml
@@ -89,10 +89,6 @@
               <li>Schlechte Nachricht: Windows muss auch drauf :'(</li>
               </ul>
             </li>
-            <li class="fragment">Datenrettung bei altem Räte-Café Server</li>
-<!--
-            <li class="fragment">PS: Wir suchen noch einen Server :)</li>
--->
           </ul>
         </section>
         <section id="members">
@@ -109,7 +105,7 @@
           <ul>
             <li class="fragment">Treffen:
               <ul>
-              <li>Termin: TBD, normalerweise alle zwei Wochen</li>
+              <li>Termin: 28.10.2016 18:30 Uhr</li>
               <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
