--- a/index.xhtml
+++ b/index.xhtml
@@ -120,8 +120,9 @@
           </ul>
         </section>
         <section id="questions">
-          <h1>Noch Fragen?</h1>
+          <h2>Noch Fragen?</h2>
           <p>Folien: <a href="https://www.linux-ag.uni-tuebingen.de/presentation/">www.linux-ag.uni-tuebingen.de/presentation/</a></p>
+          <img src="website-qr.svg" alt="Website QR-Code" style="width:48%;height:48%;" />
         </section>
       </div>
     </div>
