Update the date of our next meeting (TBD)

--- a/index.xhtml
+++ b/index.xhtml
@@ -105,7 +105,7 @@
           <ul>
             <li class="fragment">Treffen:
               <ul>
-              <li>Termin: 28.10.2016 18:30 Uhr</li>
+              <li>Termin: TBD</li>
               <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
