Use a reference for the date of our next meeting
Since avoiding redundancy can make some things easier... :D

--- a/index.xhtml
+++ b/index.xhtml
@@ -105,7 +105,7 @@
           <ul>
             <li class="fragment">Treffen:
               <ul>
-              <li>Termin: TBD</li>
+              <li>Termin: siehe <a href="https://www.linux-ag.uni-tuebingen.de">Website</a></li>
               <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
@@ -113,7 +113,7 @@
             <li class="fragment">Website: <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a></li>
             <li class="fragment">Helpdesk:
               <ul>
-              <li>Termin: TBD</li>
+              <li>Termin: siehe <a href="https://www.linux-ag.uni-tuebingen.de">Website</a></li>
               <li>Ort: Im Räte-Café (links oben im CHF (Wilhelmstraße))</li>
               </ul>
             </li>
