Display slide numbers and add some comments

--- a/index.xhtml
+++ b/index.xhtml
@@ -133,9 +133,18 @@
     <script>
       // More info https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
+        // Display the slide number (flattened slide number / total slides)
+        slideNumber: 'c/t',
+
+        // Push each slide change to the browser history
         history: true,
+
+        // Vertical centering of slides
         center: false,
+
+        // Transition style
         transition: "convex",
+
         // The "normal" size of the presentation, aspect ratio will be preserved
         // when the presentation is scaled to fit different resolutions. Can be
         // specified using percentage units.
