Update the content
In preparation for this year's presentation :)

--- a/index.xhtml
+++ b/index.xhtml
@@ -43,8 +43,9 @@
           <ul>
             <li class="fragment">GNU/Linux</li>
             <li class="fragment">Free and open-source software (FOSS)</li>
-            <li class="fragment">Kryptografie, Privatsphäre, Internet</li>
-            <li class="fragment">Austausch von Erfahrungen</li>
+            <li class="fragment">Kryptographie, Privatsphäre, Internet</li>
+            <li class="fragment">Austausch von Wissen bzw. Erfahrungen</li>
+            <li class="fragment">News, etc.</li>
           </ul>
         </section>
         <section id="goals">
@@ -82,7 +83,11 @@
         <section id="project">
           <h2>Ein aktuelles Projekt</h2>
           <ul>
-            <li class="fragment">Einrichtung eines neuen Servers mit NixOS</li>
+            <li class="fragment">Einrichtung eines neuen Servers mit NixOS
+              <ul>
+              <li>Mittlerweile abgeschlossen, kann aber noch gut erweitert werden.</li>
+              </ul>
+            </li>
             <li class="fragment">Einrichtung neuer Laptops für den StuRa
               <ul>
               <li>Gute Nachricht: Es darf GNU/Linux drauf :)</li>
@@ -94,6 +99,7 @@
         <section id="members">
           <h2>Mitglieder</h2>
           <ul>
+            <li class="fragment">Hauptsächlich Informatik-Studenten</li>
             <li class="fragment">Studierende aller Fachrichtungen</li>
             <li class="fragment">Ehemalige Studierende</li>
             <li class="fragment">Externe*</li>
@@ -105,7 +111,10 @@
           <ul>
             <li class="fragment">Treffen:
               <ul>
-              <li>Termin: siehe <a href="https://www.linux-ag.uni-tuebingen.de">Website</a></li>
+              <li>Termin: siehe
+                <a href="https://www.fsi.uni-tuebingen.de/mailman/listinfo/linux-ag/">Mailingliste</a>
+                (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
+              </li>
               <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
@@ -113,7 +122,10 @@
             <li class="fragment">Website: <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a></li>
             <li class="fragment">Helpdesk:
               <ul>
-              <li>Termin: siehe <a href="https://www.linux-ag.uni-tuebingen.de">Website</a></li>
+              <li>Termin: siehe
+                <a href="https://www.fsi.uni-tuebingen.de/mailman/listinfo/linux-ag/">Mailingliste</a>
+                (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
+              </li>
               <li>Ort: Im Räte-Café (links oben im CHF (Wilhelmstraße))</li>
               </ul>
             </li>
