Final updates for today's presentation

--- a/index.xhtml
+++ b/index.xhtml
@@ -44,8 +44,7 @@
             <li class="fragment">GNU/Linux</li>
             <li class="fragment">Free and open-source software (FOSS)</li>
             <li class="fragment">Kryptographie, Privatsphäre, Internet</li>
-            <li class="fragment">Austausch von Wissen bzw. Erfahrungen</li>
-            <li class="fragment">News, etc.</li>
+            <li class="fragment">Austausch von Wissen, Erfahrungen, News, etc.</li>
           </ul>
         </section>
         <section id="goals">
@@ -53,14 +52,15 @@
           <ul>
             <li class="fragment">Vertiefung und Erweiterung von Kenntnissen</li>
             <li class="fragment">Aufklärung (CryptoParties, Anfi-Workshops, etc.)</li>
-            <li class="fragment">Hilfe/Support</li>
             <li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
+            <li class="fragment">Hilfe/Support</li>
+            <li class="fragment">Spaß haben :)</li>
           </ul>
         </section>
         <section id="tasks">
           <h2>Was tun wir?</h2>
           <ul>
-            <li class="fragment">Regelmäßige Treffen mit Workshops (oder Präsentationen)</li>
+            <li class="fragment">Regelmäßige Treffen mit Workshops, Präsentationen oder einfach so</li>
             <li class="fragment">Helpdesk (im Räte-Café und über <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</li>
           </ul>
         </section>
@@ -134,7 +134,8 @@
         <section id="questions">
           <h2>Noch Fragen?</h2>
           <p>Folien: <a href="https://www.linux-ag.uni-tuebingen.de/presentation/">www.linux-ag.uni-tuebingen.de/presentation/</a></p>
-          <img src="website-qr.svg" alt="Website QR-Code" style="width:48%;height:48%;" />
+          <p><a href="https://dudle.inf.tu-dresden.de/d0e721518e1f070f850477db7644b52e4cb780ae/">Aktuelles Dudle zur Terminfindung</a></p>
+          <img src="website-qr.svg" alt="Website QR-Code" style="width:45%;height:45%;" />
         </section>
       </div>
     </div>
