Minor modifications for the WS 18/19

--- a/index.xhtml
+++ b/index.xhtml
@@ -61,7 +61,8 @@
           <h2>Was tun wir?</h2>
           <ul>
             <li class="fragment">Regelmäßige Treffen mit Workshops, Präsentationen oder einfach so</li>
-            <li class="fragment">Helpdesk (im Räte-Café und über <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</li>
+            <li class="fragment">Helpdesk (teilweise im Räte-Café und über die Mailingliste
+              <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</li>
           </ul>
         </section>
         <section id="todo">
@@ -81,7 +82,7 @@
           </ul>
         </section>
         <section id="project">
-          <h2>Ein aktuelles Projekt</h2>
+          <h2>Ein ehemaliges Projekt</h2>
           <ul>
             <li class="fragment">Einrichtung eines neuen Servers mit NixOS
               <ul>
@@ -114,12 +115,16 @@
               <li>Termin: siehe
                 <a href="https://www.fsi.uni-tuebingen.de/mailman/listinfo/linux-ag/">Mailingliste</a>
                 (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
+                <ul>
+                  <li>Erstes Treffen im WS 18/19:<br />26.10.2018 (Freitag) um 18 Uhr</li>
+                </ul>
               </li>
               <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
             <li class="fragment">Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a></li>
             <li class="fragment">Website: <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a></li>
+            <!--
             <li class="fragment">Helpdesk:
               <ul>
               <li>Termin: siehe
@@ -129,12 +134,12 @@
               <li>Ort: Im Räte-Café (links oben im CHF (Wilhelmstraße))</li>
               </ul>
             </li>
+            -->
           </ul>
         </section>
         <section id="questions">
           <h2>Noch Fragen?</h2>
           <p>Folien: <a href="https://www.linux-ag.uni-tuebingen.de/presentation/">www.linux-ag.uni-tuebingen.de/presentation/</a></p>
-          <p><a href="https://dudle.inf.tu-dresden.de/d0e721518e1f070f850477db7644b52e4cb780ae/">Aktuelles Dudle zur Terminfindung</a></p>
           <img src="website-qr.svg" alt="Website QR-Code" style="width:45%;height:45%;" />
         </section>
       </div>
