Minor modifications for the WS 19/20

--- a/index.xhtml
+++ b/index.xhtml
@@ -45,40 +45,42 @@
             <li class="fragment">Free and open-source software (FOSS)</li>
             <li class="fragment">Kryptographie, Privatsphäre, Internet</li>
             <li class="fragment">Austausch von Wissen, Erfahrungen, News, etc.</li>
+            <li class="fragment">Es dürfen gerne weitere Themen eingebracht werden</li>
           </ul>
         </section>
         <section id="goals">
           <h2>Unsere Ziele</h2>
           <ul>
             <li class="fragment">Vertiefung und Erweiterung von Kenntnissen</li>
+            <li class="fragment">Spaß haben :)</li>
             <li class="fragment">Aufklärung (CryptoParties, Anfi-Workshops, etc.)</li>
             <li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
             <li class="fragment">Hilfe/Support</li>
-            <li class="fragment">Spaß haben :)</li>
           </ul>
         </section>
         <section id="tasks">
           <h2>Was tun wir?</h2>
           <ul>
-            <li class="fragment">Regelmäßige Treffen mit Workshops, Präsentationen oder einfach so</li>
-            <li class="fragment">Helpdesk (teilweise im Räte-Café und über die Mailingliste
-              <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</li>
+            <li class="fragment">Regelmäßige Treffen, teilweise mit Workshops/Präsentationen</li>
+            <li class="fragment">Capture the Flag (CTF) organisieren</li>
+            <li class="fragment"><strike>Helpdesk (teilweise im Räte-Café und über die Mailingliste
+              <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</strike></li>
           </ul>
         </section>
         <section id="todo">
           <h2>Was haben wir vor?</h2>
           <ul>
             <li class="fragment">CryptoParties/KSPs auf dem Sand organisieren</li>
-            <li class="fragment">Mitorganisation des <a href="http://www.tuebix.org/">TÜBIX</a> (Tübinger Linux-Tag)</li>
+            <li class="fragment">Mitorganisation des <a href="https://www.tuebix.org">Tübix</a> (Tübinger Linuxtag)</li>
             <li class="fragment">Evtl. eigene Software-Projekte</li>
-            <li class="fragment">Verschiedene Services anbieten
+            <li class="fragment">Falls Interesse besteht: Verschiedene Services anbieten
               <ul>
               <li class="fragment">git-Server, Dudle, Etherpad, etc.</li>
               <li class="fragment">Linux Mirror-Server</li>
               <li class="fragment">Mailinglisten (aktuell bei fsi)</li>
+              <li class="fragment">Server Administration für studentische Gruppen</li>
               </ul>
             </li>
-            <li class="fragment">Server Administration für studentische Gruppen</li>
           </ul>
         </section>
         <section id="project">
@@ -87,12 +89,6 @@
             <li class="fragment">Einrichtung eines neuen Servers mit NixOS
               <ul>
               <li>Mittlerweile abgeschlossen, kann aber noch gut erweitert werden.</li>
-              </ul>
-            </li>
-            <li class="fragment">Einrichtung neuer Laptops für den StuRa
-              <ul>
-              <li>Gute Nachricht: Es darf GNU/Linux drauf :)</li>
-              <li>Schlechte Nachricht: Windows muss auch drauf :'(</li>
               </ul>
             </li>
           </ul>
@@ -112,15 +108,16 @@
           <ul>
             <li class="fragment">Treffen:
               <ul>
-              <li>Termin: siehe
-                <a href="https://www.fsi.uni-tuebingen.de/mailman/listinfo/linux-ag/">Mailingliste</a>
-                (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
-              </li>
-              <li>Ort: Raum A302 auf dem Sand 14</li>
+                <li>Erstes Treffen: 25. Oktober 2019 (Freitag)</li>
+                <li>Weitere Termine: Alle zwei Wochen (s.
+                  <a href="https://www.linux-ag.uni-tuebingen.de">Website</a>)
+                </li>
+                <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
-            <li class="fragment">Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a></li>
-            <li class="fragment">Website: <a href="https://www.linux-ag.uni-tuebingen.de">www.linux-ag.uni-tuebingen.de</a></li>
+            <li class="fragment">Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a>
+              (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
+            </li>
             <!--
             <li class="fragment">Helpdesk:
               <ul>
