Remove all fragments
They're probably more annoying than useful.

--- a/index.xhtml
+++ b/index.xhtml
@@ -41,44 +41,44 @@
         <section id="topics">
           <h2>Themen</h2>
           <ul>
-            <li class="fragment">GNU/Linux</li>
-            <li class="fragment">Free and open-source software (FOSS)</li>
-            <li class="fragment">Kryptographie, Privatsphäre, Internet</li>
-            <li class="fragment">Austausch von Wissen, Erfahrungen, News, etc.</li>
-            <li class="fragment">Es dürfen gerne weitere Themen eingebracht werden</li>
+            <li>GNU/Linux</li>
+            <li>Free and open-source software (FOSS)</li>
+            <li>Kryptographie, Privatsphäre, Internet</li>
+            <li>Austausch von Wissen, Erfahrungen, News, etc.</li>
+            <li>Es dürfen gerne weitere Themen eingebracht werden</li>
           </ul>
         </section>
         <section id="goals">
           <h2>Unsere Ziele</h2>
           <ul>
-            <li class="fragment">Vertiefung und Erweiterung von Kenntnissen</li>
-            <li class="fragment">Spaß haben :)</li>
-            <li class="fragment">Aufklärung (CryptoParties, Anfi-Workshops, etc.)</li>
-            <li class="fragment">Verbreitung/Förderung freier Software und deren Philosophie</li>
-            <li class="fragment">Hilfe/Support</li>
+            <li>Vertiefung und Erweiterung von Kenntnissen</li>
+            <li>Spaß haben :)</li>
+            <li>Aufklärung (CryptoParties, Anfi-Workshops, etc.)</li>
+            <li>Verbreitung/Förderung freier Software und deren Philosophie</li>
+            <li>Hilfe/Support</li>
           </ul>
         </section>
         <section id="tasks">
           <h2>Was tun wir?</h2>
           <ul>
-            <li class="fragment">Regelmäßige Treffen, teilweise mit Workshops/Präsentationen</li>
-            <li class="fragment">Capture the Flag (CTF) organisieren</li>
-            <li class="fragment"><strike>Helpdesk (teilweise im Räte-Café und über die Mailingliste
+            <li>Regelmäßige Treffen, teilweise mit Workshops/Präsentationen</li>
+            <li>Capture the Flag (CTF) organisieren</li>
+            <li><strike>Helpdesk (teilweise im Räte-Café und über die Mailingliste
               <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</strike></li>
           </ul>
         </section>
         <section id="todo">
           <h2>Was haben wir vor?</h2>
           <ul>
-            <li class="fragment">CryptoParties/KSPs auf dem Sand organisieren</li>
-            <li class="fragment">Mitorganisation des <a href="https://www.tuebix.org">Tübix</a> (Tübinger Linuxtag)</li>
-            <li class="fragment">Evtl. eigene Software-Projekte</li>
-            <li class="fragment">Falls Interesse besteht: Verschiedene Services anbieten
+            <li>CryptoParties/KSPs auf dem Sand organisieren</li>
+            <li>Mitorganisation des <a href="https://www.tuebix.org">Tübix</a> (Tübinger Linuxtag)</li>
+            <li>Evtl. eigene Software-Projekte</li>
+            <li>Falls Interesse besteht: Verschiedene Services anbieten
               <ul>
-              <li class="fragment">git-Server, Dudle, Etherpad, etc.</li>
-              <li class="fragment">Linux Mirror-Server</li>
-              <li class="fragment">Mailinglisten (aktuell bei fsi)</li>
-              <li class="fragment">Server Administration für studentische Gruppen</li>
+              <li>git-Server, Dudle, Etherpad, etc.</li>
+              <li>Linux Mirror-Server</li>
+              <li>Mailinglisten (aktuell bei fsi)</li>
+              <li>Server Administration für studentische Gruppen</li>
               </ul>
             </li>
           </ul>
@@ -86,7 +86,7 @@
         <section id="project">
           <h2>Ein ehemaliges Projekt</h2>
           <ul>
-            <li class="fragment">Einrichtung eines neuen Servers mit NixOS
+            <li>Einrichtung eines neuen Servers mit NixOS
               <ul>
               <li>Mittlerweile abgeschlossen, kann aber noch gut erweitert werden.</li>
               </ul>
@@ -96,17 +96,17 @@
         <section id="members">
           <h2>Mitglieder</h2>
           <ul>
-            <li class="fragment">Hauptsächlich Informatik-Studenten</li>
-            <li class="fragment">Studierende aller Fachrichtungen</li>
-            <li class="fragment">Ehemalige Studierende</li>
-            <li class="fragment">Externe*</li>
-            <li class="fragment">Du?</li>
+            <li>Hauptsächlich Informatik-Studenten</li>
+            <li>Studierende aller Fachrichtungen</li>
+            <li>Ehemalige Studierende</li>
+            <li>Externe*</li>
+            <li>Du?</li>
           </ul>
         </section>
         <section id="meet">
           <h2>Interesse?</h2>
           <ul>
-            <li class="fragment">Treffen:
+            <li>Treffen:
               <ul>
                 <li>Erstes Treffen: 25. Oktober 2019 (Freitag)</li>
                 <li>Weitere Termine: Alle zwei Wochen (s.
@@ -115,11 +115,11 @@
                 <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
-            <li class="fragment">Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a>
+            <li>Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a>
               (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
             </li>
             <!--
-            <li class="fragment">Helpdesk:
+            <li>Helpdesk:
               <ul>
               <li>Termin: siehe
                 <a href="https://www.fsi.uni-tuebingen.de/mailman/listinfo/linux-ag/">Mailingliste</a>
