Add the time of our first meeting

--- a/index.xhtml
+++ b/index.xhtml
@@ -109,10 +109,11 @@
             <li>Treffen:
               <ul>
                 <li>Erstes Treffen: 25. Oktober 2019 (Freitag)</li>
+                <li>Uhrzeit: 18:30 Uhr</li>
+                <li>Ort: Raum A302 auf dem Sand 14</li>
                 <li>Weitere Termine: Alle zwei Wochen (s.
                   <a href="https://www.linux-ag.uni-tuebingen.de">Website</a>)
                 </li>
-                <li>Ort: Raum A302 auf dem Sand 14</li>
               </ul>
             </li>
             <li>Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a>
